# chess_site

./: README.md  db.sqlite3  pyproject.toml
core/: settings.py  urls.py
main_chess_app/: admin.py  apps.py  urls.py
main_chess_app/migrations/: 0001_initial.py  0002_photo.py  0003_video_is_published_alter_photo_photo.py  0004_logo.py  0005_squad.py
main_chess_app/models/: __init__.py  category_models.py  logo_models.py  media_models.py  news_model.py  photo_model.py  squad_models.py  video_models.py
main_chess_app/views/: __init__.py  homepages_view.py  media_list_view.py  photo_list_view.py  search_view.py  show_category_view.py  show_news.py  show_partners_logo.py  single_news.py  squad_list_views.py  video_detail_view.py  videos_list_view.py
static_dev/css/: stylesheets.css
templates/: base.html
templates/includes/: footer.html  header.html  paginator.html  search.html
templates/main_chess_app/: category_list.html  full_media.html  homepages.html  news_pages.html  partners_logo.html  photo_list.html  single_news.html  squad_pages.html  video_deatal.html  video_list.html
